Lost last commint. Redoing evreything again

--- a/src/x1.tex
+++ b/src/x1.tex
@@ -15,7 +15,7 @@
 	\end{subfigure}
 	\caption{Cover art for the American version of X1 and its remake.}
 \end{figure}
-In 2005, a remake of the game was created specifically for the PlayStation Portable. This version, known as \textit{Maverick Hunter X} or simply \mhx, featured upgraded 3D graphics, closely resembling the visuals of the previous title, Mega Man X8. The primary objective of this remake was to retell the story of the first game, but with minor alterations. Notably, these changes included a reimagined portrait of X's relationships with the Mavericks and Sigma, aspects that were absent in the original game.
+In 2005, a remake of the game was created specifically for the PlayStation Portable. This version, known as \textit{Maverick Hunter X} or simply \mhx, featured upgraded 3D graphics. The primary objective of this remake was to retell the story of the first game, but with minor alterations. Notably, these changes included a reimagined portrait of X's relationships with the Mavericks and Sigma, aspects that were absent in the original game.
 
 Furthermore, the level design received modifications as well, such as the locations of Dr.~Light's capsules or the arrangement of Sigma's stages, completely different from those found in the original version of the game. 
 
@@ -75,9 +75,9 @@ While Maverick Hunter X largely follows a similar plot to the original Mega Man 
 	\caption{X}
 \end{figure}
 
-X, as described in Chapter~\ref{char:X}, is the first of a new generation of sentient robots created by Dr.~Thomas Light in the year 20XX. He possesses the unique ability to experience emotions and make autonomous decisions. Due to X's immense power, Dr.~Light needed to conduct a series of tests to ensure his integrity. Unfortunately, Dr.~Light's own lifespan would not permit him to complete all the tests, so he sealed X in a capsule capable of running the tests automatically.
+X, as described in Chapter~\ref{char:X}, is the first of a new generation of sentient robots created by Dr.~Thomas Light in the year 20XX. X possesses the unique ability to experience emotions and make autonomous decisions, but due to his immense power, Dr.~Light needed to conduct a series of tests to ensure his integrity. Unfortunately, Dr.~Light's own lifespan would not permit him to complete all the tests, so he sealed X in a capsule capable of running the tests automatically.
 
-In the year 21XX, during an archaeological expedition, Dr.~Cain (chapter~\ref{char:Cain}) discovers X's capsule~\cite{X:Manual,wiki:Cain_journal}. Dr.~Cain reawakens X and, with the aid of Light's designs and X's assistance, begins developing a new type of robot called ``Reploids''. The Reploids quickly become integrated into society and prove invaluable in performing challenging tasks. Despite this, however, X remains uncertain about his place in the world and the future that Dr.~Light envisioned for him. However, when the villainous Sigma initiates a war against humanity, X is compelled to step forward and fight alongside his ally, Zero, to restore peace.
+In the year 21XX, during an archaeological expedition, Dr.~Cain (chapter~\ref{char:Cain}) discovers X's capsule~\cite{X:Manual,wiki:Cain_journal}. Dr.~Cain reawakens X and, with the aid of Light's designs and X's assistance, begins developing a new type of robot called ``Reploids''. The reploids quickly become integrated into society and prove invaluable in performing challenging tasks. Despite this, however, X remains uncertain about his place in the world and the future that Dr.~Light envisioned for him. However, when the villainous Sigma initiates a war against humanity, X is compelled to step forward and fight alongside his ally, Zero, to restore peace.
 
 The account given so far aligns with X's original role in the original game. However, as mentioned earlier, Maverick Hunter X rewrites X's backstory, introducing a different series of events before Sigma's revolt. In this retelling, Dr.~Light seals X away not to test his integrity but because he believes the world is not yet ready for X's technology and potential. Still, Dr.~Light firmly believes that X possesses a good spirit and that he will use his power to achieve peace~\cite{wiki:MM_MHX_X}. Furthermore, upon awakening, X joins immediately the Maverick Hunters (a deviation from the original storyline), serving in the 17th Elite Unit alongside Zero and under Sigma's direct command. Despite X's extraordinary potential, his hunter rank is designated as B, unlike Zero's SA rank. This low rank is attributed to X's apparent hesitation during battle, a result of his pacifist nature, which makes him reluctant to fight and prevents him from fully utilizing his true power~\cite{Xcoll1:Manual_X1}. Nevertheless, when Sigma launches his war against humanity, X decides to stand up and fight alongside Zero to restore peace to the world.
 
@@ -1603,7 +1603,8 @@ Notably, Velguarder's weak point is the Shotgun Ice, inflicting considerable dam
 	\centering
 	\includegraphics[height=\portraitsize]{figures/X1/Sigma_stages/Sigma.jpg}
 	\includegraphics[height=\portraitsize]{figures/X1/Sigma_stages/MHXSigma.jpg}
-	\caption{Sigma's design(\cite{book:MMX_Complete_art}).}
+	\includegraphics[height=\portraitsize]{figures/X1/Sigma_stages/X_DiVE_Sigma.png}
+	\caption{Sigma's designs in \cite{book:MMX_Complete_art} and the X Dive game.}
 \end{figure}
 Once Velguarder has been vanquished, Sigma himself emerges to engage X in battle.
 
