--- a/src/x2.tex
+++ b/src/x2.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = en_US
 %MEGA MAN X2.TEX
 \chapter{Game overview}
 \textit{Mega Man X2} serves as a direct sequel to the inaugural \textit{Mega Man X} installment. Released in Japan on December 16 1994, and subsequently in North America and PAL regions in 1995, the sequel retains the gameplay mechanics and visual style of its precursor. Notably, Capcom incorporated the Cx4 enhancement chip into the cartridge, a technological advancement that facilitated the integration of 3D wireframe effects into the game. The development team received instructions to maximize the utilization of these effects throughout the game's design~\cite{wiki:MMX2}. However, an integral aspect of the game's localization involved a substantial script adaptation for the American version. This changes led to the omission of key details and connections within the plot, ultimately creating a more straightforward narrative, albeit at the cost of its comprehensive nature. Of particular note, this process changed all instances of X's name with \textit{Mega Man X}. To alleviate any potential confusion, this chapter will adhere to a translation directly from the Japanese game script, available in sources like \cite{wordpress:X2_japanese_script} and \cite{gamesfaq:X2_japanese_script}, in order to account for the entirety of plot-related events.
@@ -24,13 +25,13 @@ Six months after X's victory over Sigma, the mavericks' threat continues to plag
 	\caption {X attacking the maverick factory}
 \end{figure}
 
- The Maverick Hunters manage to locate the factory responsible for manufacturing these corrupted reploids. During an operation against this facility, the events of Mega Man X2 begins. Following an intense battle outside the factory, X successfully infiltrates the facility  and ultimately obliterates it. The scene then shifts to reveal three shadowy figures observing X's actions on a monitor. Th three acknowledge the potential threat X poses to their ambitions, despite remaining firmly sure of their superiority. Therefore, they keep observing him as he battles their eight SA-class maverick subordinates, thus granting them additional time to finalize their plans. 
+ The Maverick Hunters manage to locate the factory responsible for manufacturing these corrupted reploids. During an operation against this facility, the events of Mega Man X2 begins. Following an intense battle outside the factory, X successfully infiltrates the facility  and ultimately obliterates it. The scene then shifts to reveal three shadowy figures observing X's actions on a monitor. The three acknowledge the potential threat X poses to their ambitions, despite remaining firmly sure of their superiority. Therefore, they keep observing him as he battles their eight SA-class maverick subordinates, thus granting them additional time to finalize their plans. 
 \begin{figure}[htp]
 	\centering
 	\includegraphics[height=3cm]{figures/X2/story_2.jpg}
-	\caption {The X-Hunters realizing X's strength}.
+	\caption {The X-Hunters realizing X's strength.}
 \end{figure}
-However, X exceeds the expectations of these enigmatic figures by vanquishing the mavericks at a quicker pace than anticipated. Consequently, the three figures emerge from the shadows to directly confront X in an effort to hinder his progress and eliminate him. The three reveal their identities to the Maverick Hunter headquarters, introducing themselves as Agile, Serges, and Violen, collectively forming a group known as the ``X-Hunters'', and claim that their objective is to serve as a counterpart to the Maverick Hunters. Subsequently, they challenge X with a proposition: for each X-Hunter he successfully locates and defeats in a one-on-one confrontation, he will receive a piece of Zero's recovered and repaired body. X proceeds to accept the challenge, and resume his battle against the remaining mavericks.
+X, however, exceeds the expectations of these enigmatic figures by vanquishing the mavericks at a quicker pace than anticipated. Consequently, the three figures emerge from the shadows to directly confront X in an effort to hinder his progress and eliminate him. The three reveal their identities to the Maverick Hunter headquarters, introducing themselves as Agile, Serges, and Violen, collectively forming a group known as the ``X-Hunters'', and claim that their objective is to serve as a counterpart to the Maverick Hunters. Subsequently, they challenge X with a proposition: for each X-Hunter he successfully locates and defeats in a one-on-one confrontation, he will receive a piece of Zero's recovered and repaired body. X proceeds to accept the challenge, and resume his battle against the remaining mavericks.
 
 The culmination of this journey leads X to the X-Hunter fortress, where the story branches into two possible outcomes based on X's success in defeating the X-Hunters and reclaiming Zero's parts. Should X successfully gather all of Zero's parts, Dr.~Cain undertakes the reparation process and identifies the X-Hunter fortress's location. If, however, X fails to retrieve at least one of Zero's parts, the X-Hunters infiltrate Dr. Cain's laboratory, confiscating all of Zero's components, including the control circuit necessary for his revival. Regardless of the outcome, the X-Hunter fortress's position is eventually traced to the North Pole.
 
@@ -44,7 +45,7 @@ If Zero's parts remain incomplete, Sigma stands alongside a restored but unrespo
 	\caption{X against Sigma and Zero/Fake Zero.}
 \end{figure}
 
-Regardless of the circumstances, X eventually reaches the final confrontation with Sigma, who has acquired a new body. Similar to the previous game, X manages to defeat Sigma's physical form, only to uncover the truth: Sigma's true nature is that of a sentient virus capable of materializing in the real world. Following an intense battle, X emerges victorious, and Sigma disappears after issuing a final warning. This time, rather than blaming X for the failure of his plans, Sigma warns that he will always find a way to match X's power, regardless of its level. Despite his ominous words, Sigma's lingering concern is the alliance between X and Zero. Sigma is surprised by the unexpected outcome, as he had firmly believed Zero would stand by his side, considering it almost a destiny.
+Regardless of the circumstances, X eventually reaches the final confrontation with Sigma, who has acquired a new body. Similar to the previous game, X manages to defeat Sigma's physical form, only to uncover the truth: Sigma's real nature is that of a sentient virus capable of materializing in the real world. Following an intense battle, X emerges victorious, and Sigma disappears after issuing a final warning. This time, rather than blaming X for his plans' failure, Sigma warns that he will always find a way to match X's power, regardless of his level. Despite his ominous words, Sigma's lingering concern is the alliance between X and Zero. Sigma is surprised by the unexpected outcome, as he had firmly believed Zero would stand by his side, considering it almost a destiny.
 
 Upon Sigma's defeat, X and Zero reunite near a seaside. In this poignant moment, X reflects on his purpose, the immense power within him, and the potential realization of the dream envisioned by Dr.~Light—a world where humans and reploids coexist in harmony.
 
@@ -78,7 +79,7 @@ Although X's extraordinary abilities are well-established, his rank as an Hunter
 
 As described in Chapter~\ref{char:Zero}, Zero is an SA-ranked Maverick Hunter affiliated with the 17th Elite Unit, and he stands as X's closest confidant and best friend. Their deep bond enables Zero to truly grasp X's sentiments and emotions. During the conflict with Sigma, Zero assumed leadership of the Maverick Hunters, guiding them in the battle against Sigma's uprising. Near the end of the conflict Zero was forced to detonate his energy core to protect his friend X, but at the cost of his life. Fortunately, Zero's control chip survived the explosion and was preserved within the Maverick Hunter headquarters.
 
-Parallel to X's circumstances, repairing Zero's intricate body presents a challenge beyond Dr.~Cain's expertise. Nonetheless, the resourceful scientist Serges of the X-Hunters is able to not only reconstruct Zero's body but also enhance it, effectively resurrecting him as a Maverick\cite{wayback:X2_resources} (subject to the specific ending achieved by the player). The responsibility for Zero's restoration and upgrades may fall to either Serges or Dr.~Cain, employing parts rebuilt by Serges. By the conclusion of the game, Zero makes his triumphant return. Depending on the player's choices, he either confronts X or destroys a duplicate of himself. Zero subsequently grants X a passage to confront Sigma. In the game's conclusion, Zero is depicted gazing out at the sea alongside his friend X, encapsulating their enduring companionship.
+Parallel to X's circumstances, repairing Zero's intricate body presents a challenge beyond Dr.~Cain's expertise. Nonetheless, the resourceful scientist Serges of the X-Hunters is able to not only reconstruct Zero's body but also enhance it, effectively resurrecting him as a Maverick~\cite{wayback:X2_resources} (subject to the specific ending achieved by the player). The responsibility for Zero's restoration and upgrades may fall to either Serges or Dr.~Cain, employing parts rebuilt by Serges. By the conclusion of the game, Zero makes his triumphant return. Depending on the player's choices, he either confronts X or destroys a duplicate of himself. Zero subsequently grants X a passage to confront Sigma. In the game's conclusion, Zero is depicted gazing out at the sea alongside his friend X, encapsulating their enduring companionship.
 
 \subsection{Dr.~Cain}
 \begin{figure}[htp]
@@ -107,12 +108,12 @@ Depending on the player's progression, the X-Hunters could be either entirely de
 \section{Game Mechanics}
 As a direct sequel to \emph{Mega Man X}, Mega Man X2 maintains most of the gameplay mechanics present in the first title while introducing several new features and enhancements:
 \begin{itemize}
-	\item Dashing: X starts the game with the ability to dash, providing increased mobility. Additionally, this ability can be upgraded further to include air-dashing, allowing for greater maneuverability in mid-air.
-	\item Stage Interactions: Unlike the first game, Mega Man X2 removes the concept of stage interactions. Completing a particular level no longer grants specific advantages in another stage
-	\item X-Hunter Challenges: After two bosses have been defeated, the three X-Hunters will start appearing in various remaining levels. Their movements can be tracked on the map screen whenever the player returns to it. To challenge an X-Hunter, the player needs to find a secret room within a stage, normally inaccessible. Defeating each X-Hunter grants X a part of Zero to resurrect his friend. If the player deliberately avoids the X-Hunter fights, the X-Hunters will flee permanently, resulting in the loss of the corresponding Zero part. 
-	\item Ride Chaser: In a specific stage, X gains access to the Ride Chaser, a high-speed motorcycle. Unlike the Ride Armor, the Ride Chaser moves autonomously in the direction X is facing. It can jump and dash forward but cannot be stopped and if it collides with a wall, it will explode. Unlike the Ride Armor, the Ride Chaser doesn't provide protection to X, so he takes full damage when hit by enemies.
-	\item New Ride Armor: This game features an upgraded Ride Armor from the previous game. This new version is controlled just as the precedent, but can also perform a charged dash attack, by keeping the fire button pressed, and hover for a short amount of time by pressing the jump button.
-	\item Desperation moves for bosses: Starting from this game, certain bosses will change their attack pattern when below a certain HP threshold. This changes may include a phase change with increased damage or a desperation move, a more powerful attack usually during which the boss becomes invincible.
+	\item \textbf{Dashing}: X starts the game with the ability to dash, providing increased mobility. Additionally, this ability can be upgraded further to include air-dashing, allowing for greater maneuverability in mid-air.
+	\item \textbf{Stage Interactions}: Unlike the first game, Mega Man X2 removes the concept of stage interactions. Completing a particular level no longer grants specific advantages in another stage
+	\item\textbf{ X-Hunter Challenges}: After two bosses have been defeated, the three X-Hunters will start appearing in various remaining levels. Their movements can be tracked on the map screen whenever the player returns to it. To challenge an X-Hunter, the player needs to find a secret room within a stage, normally inaccessible. Defeating each X-Hunter grants X a part of Zero to resurrect his friend. If the player deliberately avoids the X-Hunter fights, the X-Hunters will flee permanently, resulting in the loss of the corresponding Zero part. 
+	\item \textbf{Ride Chaser}: In a specific stage, X gains access to the Ride Chaser, a high-speed motorcycle. Unlike the Ride Armor, the Ride Chaser moves autonomously in the direction X is facing. It can jump and dash forward but cannot be stopped and if it collides with a wall, it will explode. Unlike the Ride Armor, the Ride Chaser doesn't provide protection to X, so he takes full damage when hit by enemies.
+	\item \textbf{New Ride Armor}: This game features an upgraded Ride Armor from the previous game. This new version is controlled just as the precedent, but can also perform a charged dash attack, by keeping the fire button pressed, and hover for a short amount of time by pressing the jump button.
+	\item \textbf{Desperation moves} for bosses: Starting from this game, certain bosses will change their attack pattern when below a certain HP threshold. This changes may include a phase change with increased damage or a desperation move, a more powerful attack usually during which the boss becomes invincible.
 \end{itemize}
 
 \section{Weapons}\label{X2:sub_weapon}
@@ -303,22 +304,23 @@ According to \cite{tw:second_armor}\footnote{Translation: \url{https://twitter.c
 
 The second armor, much like its predecessor, is composed of four core parts, with an additional fifth secret part, similar to the first game's Hadoken.
 \begin{itemize}
-\item Foot Parts: These parts, once equipped, allow X to execute mid-air dashes. However, air dashes cannot be performed if X has already dashed on the ground or during a dash-jump. The distance covered during an air dash can be extended by combining the Foot Parts with a charged Speed Burner. The capsule containing this power-up is concealed within the Desert Base, obscured behind a breakable wall accessible only via the Spin Wheel sub-weapon.
+\item \emph{Foot Parts}: These parts, once equipped, allow X to execute mid-air dashes. However, air dashes cannot be performed if X has already dashed on the ground or during a dash-jump. The distance covered during an air dash can be extended by combining the Foot Parts with a charged Speed Burner. The capsule containing this power-up is concealed within the Desert Base, obscured behind a breakable wall accessible only via the Spin Wheel sub-weapon.
 
-\item Body Parts: Similar to the previous game, this upgrade boosts X's defense by halving all incoming damage. Additionally, every instance of damage sustained by X contributes to a special gauge. Once this gauge is fully charged, X can execute the \textit{Giga Crush} attack, which inflicts significant damage upon all on-screen enemies. However, the gauge does not refill between stages, meaning that energy can only be accumulated by absorbing hits. The capsule for the Body Parts is concealed in the Robot Junkyard stage, beneath a floor at the initial stage section. This floor is destructible solely through the use of the Spin Wheel sub-weapon.
+\item \emph{Body Parts}: Similar to the previous game, this upgrade boosts X's defense by halving all incoming damage. Additionally, every instance of damage sustained by X contributes to a special gauge. Once this gauge is fully charged, X can execute the \textit{Giga Crush} attack, which inflicts significant damage upon all on-screen enemies. However, the gauge does not refill between stages, meaning that energy can only be accumulated by absorbing hits. The capsule for the Body Parts is concealed in the Robot Junkyard stage, beneath a floor at the initial stage section. This floor is destructible solely through the use of the Spin Wheel sub-weapon.
 \begin{figure}[htp]
 	\centering
 	\includegraphics[height=3cm]{figures/X2/weapons/G_crush_1.png}
 	\caption{Giga Crush attack.}
-\end{figure}.
+\end{figure}
 
-\item Arm Parts: This enhancement enables X to wield two X-Busters when employing a charged shot. While charging, X can surpass the initial charge level, stockpiling energy in the secondary Buster, up to two levels. Upon releasing the fire button, X discharges a first charged shot based on the reached charge level, and will remain pulsating. If the fire button is pressed again during this pulsating phase, X unleashes a fully charged second shot. Notably, if both charged shots are discharged in rapid succession, they can combo against enemies, including bosses, bypassing their invincibility frames and delivering substantial damage. This upgrade is located within the Wheel Gator stage, hidden within a chamber accessible through wall jumping from an opening in the roof. The room can be reached through precise wall-jumping, utilizing the Giga Crush to extend X's airborne duration, utilizing the Strike Chain to draw X towards the wall (\path{videos/X2/Buster_capsule_chain.mp4}), or simply by employing the air dash to access the opening.
+\item \emph{Arm Parts}: This enhancement enables X to wield two X-Busters when employing a charged shot. While charging, X can surpass the initial charge level, stockpiling energy in the secondary Buster, up to two levels. Upon releasing the fire button, X discharges a first charged shot based on the reached charge level, and will remain pulsating. If the fire button is pressed again during this pulsating phase, X unleashes a fully charged second shot. Notably, if both charged shots are discharged in rapid succession, they can combo against enemies, including bosses, bypassing their invincibility frames and delivering substantial damage. This upgrade is located within the Wheel Gator stage, hidden within a chamber accessible through wall jumping from an opening in the roof. The room can be reached through precise wall-jumping, utilizing the Giga Crush to extend X's airborne duration, utilizing the Strike Chain to draw X towards the wall (\path{videos/X2/Buster_capsule_chain.mp4}), or simply by employing the air dash to access the opening.
 	\begin{figure}[htp]
 	\centering
 	\includegraphics[height=2cm]{figures/X2/weapons/Double_shot.png}
 	\caption{Double charged shot.}
 \end{figure}
-\item Head Parts: These parts equip X with the item tracer, a radar that X can activate and which indicates the direction of the nearest hidden element within the stage. Identified secrets include secret passages and items such as heart tanks, sub-tanks, Light's capsules, and refill rooms. Despite featuring an ammunition gauge, this upgrade consumes no energy. The capsule housing the Head Parts is hidden in Crystal Snail's stage, found at the conclusion of a secret path accessible while sliding down a pit after defeating the stage's sub-boss.
+
+\item \emph{Head Parts}: These parts equip X with the item tracer, a radar that X can activate and which indicates the direction of the nearest hidden element within the stage. Identified secrets include secret passages and items such as heart tanks, sub-tanks, Light's capsules, and refill rooms. Despite featuring an ammunition gauge, this upgrade consumes no energy. The capsule housing the Head Parts is hidden in Crystal Snail's stage, found at the conclusion of a secret path accessible while sliding down a pit after defeating the stage's sub-boss.
 \begin{figure}[htp]
 	\centering
 	\includegraphics[height=3cm]{figures/X2/weapons/Tracer.png}
@@ -893,7 +895,7 @@ Inside the large room, past the second spotlight section and before the Raider K
 	\centering
 	\includegraphics[height=\portraitsize]{figures/X2/Magna_centipede/Magna_Centipede.png}
 	\includegraphics[height=\portraitsize]{figures/X2/Magna_centipede/XMagna_Centipede.png}
-	\caption{Magna Centipede's artwork~\cite{book:MMX_Complete_art} and X Dive's artwork}
+	\caption{Magna Centipede's artwork~\cite{book:MMX_Complete_art} and X Dive's artwork.}
 \end{figure}
 Magna Centipede was originally a Maverick Hunter affiliated with the Special 0th Unit, known as the ``\textit{Shinobi}'' unit. Participating in the initial Maverick uprising, he fought against Sigma as a Maverick Hunter, but was ultimately captured during a mission and subsequently brainwashed~\cite{wayback:X2_resources}, transforming him into a loyal servant of Sigma. This transformation stripped him of his emotions, turning him into a ruthless and cold assassin, earning him the title of ``\textit{Crimson Assassin}''~\cite{book:MMX_Complete_art}. His loyalty to Sigma was unwavering, leading him to carry out any order, even if it meant eliminating his former comrades. As a result of his obedience, the X-Hunters entrusted him with a critical mission: to capture the Central Computer and utilize it to spread the Maverick Virus worldwide. 
 \begin{figure}[htp]
@@ -1010,7 +1012,7 @@ Overdrive Ostrich was once a proud member of the 7th Maverick Hunter Airborne Un
 	\centering
 	\includegraphics[height=\portraitsize]{figures/X2/Overdrive_ostrich/Overdrive_Ostrich.png}
 	\includegraphics[height=\portraitsize]{figures/X2/Overdrive_ostrich/XOverdrive_Ostrich.png}
-	\caption{Overdrive Ostrich's artwork in \cite{book:MMX_Complete_art} and from X Dive's game}
+	\caption{Overdrive Ostrich's artwork in \cite{book:MMX_Complete_art} and from the X Dive's game.}
 \end{figure} Sigma, recognizing the potential of Ostrich's powers, showed him how to harness these abilities. In return, Ostrich pledged his loyalty to Sigma and his cause. During the second uprising, the X-Hunters assigned Ostrich the mission of seizing an abandoned missile base and utilizing its remaining warhead to destroy the Maverick Hunter HQ~\cite{Xcoll1:Manual_X2}, \cite{wayback:X2_resources}, \cite{wiki:Overdrive_Ostrich}.
 
 True to his epithet, the ``\textit{Swift Runner of the Sands}''~\cite{book:MMX_Complete_art} Overdrive Ostrich's boss battle takes place in the middle of the desert within a long arena. At the time of this writing, this arena holds the record as the longest in the series. The battle against Ostrich is heavily influenced by both his choice of attack and the location from which he executes it, as the various heights of the sand dunes can significantly alter the ease of evading specific attacks.
